fix some sonarlint errors